<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pokermen</string>
    <string name="title_activity_splash">Splash</string>
    <string name="str_start_btn">Start</string>
    <string name="str_new_game_btn">New Game</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="str_up">UP</string>
    <string name="str_down">DOWN</string>
    <string name="str_left">LEFT</string>
    <string name="str_right">RIGHT</string>
    <string name="save_txt">SAVE</string>
    <string name="attack_txt">ATTACK</string>
    <string name="bag_txt">BAG</string>
    <string name="run_txt">RUN</string>
    <string name="empty_txt">[empty]</string>
    <string name="xp_txt">XP</string>
    <string name="lvl_txt">LVL: </string>
    <string name="bat_txt">pokermen attack!!</string>
    <string name="dev_txt">DEVELOPMENT BUILD. DO NOT REDISTRIBUTE.</string>
    <string name="dtt_txt">Dev Time Travel</string>
    <string name="year_txt">2014</string>
    <string name="pkrmn_txt">PKRMN</string>
    <string name="pok_inf_txt">Tap a pokermens pic to send them to the front. Tap the first pokermen to discard them forever.</string>
    <string name="close_txt">CLOSE</string>
    <string name="itmq_txt">ITEM / QUANTITY</string>
    <string name="pp_txt">PP: 0/0</string>
    <string name="none">none</string>
    <string name="no_change">no let me change it im dumb</string>
    <string name="title_activity_lvl01">Lvl01</string>
    <string name="hello_world">Hello world!</string>
    <string name="items_txt">ITEMS</string>
    <string name="player_txt">PLAYER</string>
    <string name="items_str">ITEMS</string>
    <string name="title_activity_lvl02">Lvl02</string>
    <string name="title_activity_lvl03">Lvl03</string>
    <string name="title_activity_lvl04">Lvl04</string>
    <string name="title_activity_lvl05">Lvl05</string>
    <string name="title_activity_battle">BattleActivity</string>

</resources>
