<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:contentDescription="@string/empty_txt"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/txt_pok01_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/dev_txt"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_pok01_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:text="@string/year_txt"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_player"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:enabled="false"
        android:onClick="startButton_press"
        android:text="@string/str_start_btn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="@string/dtt_txt"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/White" />

    <ImageView
        android:id="@+id/img_player"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="43dp"
        android:contentDescription="@string/none"
        android:src="@drawable/pokermen" />

    <Button
        android:id="@+id/new_game_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_btn"
        android:layout_centerHorizontal="true"
        android:onClick="newGame_press"
        android:text="@string/str_new_game_btn" />

    <Button
        android:id="@+id/but_trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/img_player"
        android:layout_marginTop="18dp"
        android:onClick="devState1"
        android:text="DEV STATE 1" />

    <Button
        android:id="@+id/but_up1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/but_trash"
        android:onClick="devState2"
        android:text="DEV STATE 2" />

    <Button
        android:id="@+id/but_up3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/start_btn"
        android:onClick="devState3"
        android:text="DEV STATE 3" />

    <Button
        android:id="@+id/but_up4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/but_up3"
        android:onClick="devState4"
        android:text="DEV STATE 4"
        android:enabled="false" />

    <Button
        android:id="@+id/but_up5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/but_up4"
        android:onClick="devState5"
        android:text="DEV STATE 5"
        android:enabled="false" />

</RelativeLayout>